# StdAPI

./: LICENSE  README.md  pyproject.toml
stdapi/: __init__.py  client.py  exceptions.py  media.py
